--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -16,6 +16,8 @@
 						Submitted by
 						= @pin.user.email	
 					.col-md-6
-						.btn-group.pull-right	
-							= link_to "Edit", edit_pin_path, class: "btn btn-default"
-							= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
+						.btn-group.pull-right
+							= if user_signed_in?
+								= if @pin.user_id == current_user.id		
+									= link_to "Edit", edit_pin_path, class: "btn btn-default"
+									= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
