--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,11 +17,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-@import "bootstrap-sprockets";
-@import "bootstrap";
 
 body {
-	background: #E9E9E9;
+	background: tomato;
 	padding-top: 70px;
 }
 
@@ -30,10 +28,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 nav {
+	background-color: white;
+	opacity: .5;
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 	.navbar-brand {
 		a {
-			color: #BD1E23;
+			color: #000;
 			font-weight: bold;
 			&:hover {
 				text-decoration: none;
