--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
 %body
 	%nav.navbar.navbar-default.navbar-fixed-top
 		.container
-			.navbar-brand= link_to "Pin Board", root_path
+			.navbar-brand= link_to "Jon`s Board", root_path
 
 			- if user_signed_in?
 				%ul.nav.navbar-nav.navbar-right
