--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -17,7 +17,7 @@
 						= @pin.user.email	
 					.col-md-6
 						.btn-group.pull-right
-							= if user_signed_in?
-								= if @pin.user_id == current_user.id		
+							- if user_signed_in?
+								- if @pin.user_id == current_user.id		
 									= link_to "Edit", edit_pin_path, class: "btn btn-default"
 									= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default"
